src/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>ActiveOffer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Forum__c</fullName>
        <label>Approval Forum</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Scope__c</fullName>
        <description>Requirement 1115</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field needs to describe the approval scope of an upcoming gate approval (next G4 or G5): what is expected to be approved. It must include information on changes versus previous approval (no change or change + description of the delta)</inlineHelpText>
        <label>Approval Scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_by_Pricing_Manager_MN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requirement 600</description>
        <label>Approved by Pricing Manager(MN)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_for_Pricing_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req 675: This is a Flag whose value if =Y, Then G4 can be bypassed.</description>
        <label>Authorized for Pricing Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_White_copies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requirement 580</description>
        <label>Black &amp; White copies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blanket_Approval_Condition__c</fullName>
        <description>Req. #3306, Blanket Approval Field for LoA upload --- no longer used after July 2021</description>
        <encryptionScheme>None</encryptionScheme>
        <label>OLD Blanket Approval Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgetary_non_binding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Budgetary offers are defined as offers proposing an indicative price, based on Nokia ́s standard T&amp;Cs or contractually agreed T&amp;Cs, with no indication of any detailed item break-down and which cannot form the basis of a contractual agreement.</inlineHelpText>
        <label>Budgetary &amp; non-binding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>By_Pass_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>No longer used after July 2021</description>
        <label>OLD By Pass Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_or_Flash_Drive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requirement 580</description>
        <label>CD or Flash Drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checking_Manual_Updation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req:5091 - Solution Sign-Off Validations(field to check manual updation of sso to Attached)</description>
        <label>Checking Manual Updation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color_copies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requirement 580</description>
        <label>Color copies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Combined_Portfolio_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>675: Used by Bid Manager to indicate that Offer contains portfolio elements from both legacy companies, and may require support of Clearing Team in potential cross-ordering scenarios</description>
        <label>Combined Portfolio Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Requirement 580</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Country_of_Delivery__c</fullName>
        <description>Requirement 580: It will capture countryISOCode2 from Account</description>
        <formula>Opportunity__r.Account.CountryNameISO2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Delivery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Opportunity__r.AccountId , Opportunity__r.Account.Name,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Offer_Due_Date__c</fullName>
        <description>Requirement 580</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Offer Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_and_Competitive_Situation__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer and Competitive Situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <description>Req 580. Modified label for field-Sales Process : Sprint 5 hyper care fixes: 1114</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G4/G5 Bypass Decision Maker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Collaboration_site_SFDocs__c</fullName>
        <description>May2021: Link to archive of offer documents submitted to customer
2017: Req: #181-Sprint 3-URL for Sharepoint location for large-team collaboration on offer development</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Link to archive of offer documents submitted to customer (if not directly uploaded in CRM)</inlineHelpText>
        <label>Customer Submission Repository</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G4ApprovalDateVsCreatedDate__c</fullName>
        <description>SF Ticket: 00004886 : Check if G4ApprovalDate &lt; Offer CreatedDate if True &apos;Cleanup required&apos; else &apos;Cleanup Not Required&apos;</description>
        <formula>IF(NOT(ISBLANK(G4_Approval_Date__c)) &amp;&amp;(G4_Approval_Date__c &lt; DATEVALUE(CreatedDate)) ,&quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCleanupRequired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4_Approval_Cycle_Time__c</fullName>
        <label>G4 Approval Cycle time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4_Approval_Date__c</fullName>
        <description>675: Auto updated from Opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G4 Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G4_Approval_Overdue_Days__c</fullName>
        <formula>if( ISBLANK( G4_Approval_Date__c ) , today() - Opportunity__r.G4_Planned_Date__c ,  G4_Approval_Date__c - Opportunity__r.G4_Planned_Date__c )</formula>
        <label>G4 Approval Overdue Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4_Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>G4 Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4_passed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req #5672
Checkbox on active offer which is getting ticked if the opportunity has passed G4 approval.</description>
        <label>G4 passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOA_Bypass__c</fullName>
        <description>Sales Process : Sprint 5 hyper care fixes: 1114
D-8480: New Help text
00018285: Corrected Help Text
ticket 242449 replase Help Text</description>
        <inlineHelpText>&quot;Pre-approved&quot;
For AM: pricing and T&amp;Cs follow a blanket approval.
For PrM: pricing/margin and T&amp;Cs authorized by the BG.
&quot;G4 approved or contracted&quot;: pricing and T&amp;Cs are exactly the one of the signed contract Or Inline with previous approved G4.</inlineHelpText>
        <label>G4/G5 Bypass Offer Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No LoA</fullName>
                    <label>G4 Approved or Contracted</label>
                </value>
                <value>
                    <fullName>Authorized for Pricing Manager</fullName>
                </value>
                <value>
                    <fullName>Pre-approved Price List for Account Managers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Time_Modified_By_WTD_Tool__c</fullName>
        <description>When Offer is updated from WTD tool, this field is also updated, giving the information when the update happened.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When Offer is updated from WTD tool, this field is also updated, giving the information when the update happened.</inlineHelpText>
        <label>Last Time Modified By WTD Tool</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_User_Updating_WTD_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last User Updating WTD Information</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OffersUpdatedByWTD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_BG__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Lead BG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Group_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_BU__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Lead BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Offer_Lead_BU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Approval_Level_G4__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Approval Level (G4)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Approval_Level_G5__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Approval Level (G5)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Approval_Level__c</fullName>
        <description>LoA Approval Level is a picklist Field on Offer Object.</description>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoA_G4_Approval_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Currency__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AP Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoA_G4_Approval_Level__c</fullName>
        <description>LoA Approval Level is a picklist Field on Offer Object.</description>
        <label>G4 Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoA_G4_Approval_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Level_Adjustment_Approver__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Level Adjustment Approver</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoA_Level_After_STA_G4__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Approval Level After STA (G4)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Level_After_STA_G5__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Approval Level After STA (G5)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Level_After_Single_Trigger_Approval__c</fullName>
        <description>Requirement 1115: automatically filled out of LoA file (G11 in upload tab &gt; LoA file)</description>
        <label>Approval Level After STA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoA_G4_Approval_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Level_Before_STA_G4__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Approval Level Before STA (G4)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Level_Before_STA_G5__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Approval Level Before STA (G5)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Level_Before_Trigger_Approval__c</fullName>
        <description>Requirement #932 : Renaming label as per Requirement 1326</description>
        <label>Approval Level before STA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoA_G4_Approval_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoA_Level_Original__c</fullName>
        <description>Requirement 1115 : Automatically filled out of LoA file (concrete field already provided)</description>
        <label>LoA Level Original</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LoA_G4_Approval_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Sales_LoA_Base_Case__c</fullName>
        <description>Ticket #26483: Label update
Req #2286 : Create new field for Excel Add-In</description>
        <inlineHelpText>The value is in AP Currency.</inlineHelpText>
        <label>Total Net Sales (AP Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Execute_Decision_Maker__c</fullName>
        <description>Sales Process: Sprint 12 Requirement 3789 : The label for the &apos;Gate 6 Bypass (No Execute needed)&apos; decision maker.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>No execute Decision maker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_LoA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>REQ 934 : On Offer object for Direct Opportunities only: 
- New Flag: &quot;No LoA&quot;</description>
        <label>G4 Approved or Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Support_Decision_Maker__c</fullName>
        <description>Sprint 8 Requirement 2505 Creating field on &apos;Offer&apos; Object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>No Offer Support Decision Maker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Support_Offer_Condition__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Sprint 8 Req#2505. Creating field on &apos;Offer&apos; Object. D-3996 (rename the label)</description>
        <label>Retired Field - Gate 3 Bypass</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Approval_Date__c</fullName>
        <description>Req 580</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Close_Date__c</fullName>
        <description>Requirement 580: Indicates when tendering teams have finished their work.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <description>Req 580</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_ID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Offer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Offer_Language__c</fullName>
        <description>D-0917: As per 5.7</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Notes__c</fullName>
        <description>Req 580</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Offer_Number__c</fullName>
        <description>This field will capture the Offer Number from external system or auto populate in SFDC</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Offer Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>This field will be appended at the end of Offer Number (01, 02)</description>
        <formula>if(
	Opportunity__r.count_offer__c &lt; 9, &apos;0&apos; &amp; TEXT(Opportunity__r.count_offer__c +1 ), TEXT(Opportunity__r.count_offer__c+ 1)
)</formula>
        <label>#Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_submitted_to_customer_date__c</fullName>
        <description>Req 580: On offer revision, clear out/recalculate G4, G5, G6 dates at Oppty level</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Offer Submitted to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Req 341</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Business_Type__c</field>
                <operation>contains</operation>
                <value>Standard Opportunity, Committed Upsell, Standard Opportunity, Committed Upsell, Fast Track Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Page_count__c</fullName>
        <description>Requirement 580</description>
        <label>Page count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_approved_Decision_Maker__c</fullName>
        <description>Req 580</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre-approved Decision Maker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_approved_Price_List_for_Acc_Managers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-approved Price List for AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_approved_Pricelist_for_BG_Pre_sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req 580</description>
        <label>Pre-approved Pricelist for BG Pre-sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Req 580: Copy of the Unweighted Value from Opportunity(D-0913)
		D-6487 - changed currency length to (16,2) from (18,0)</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Print_Date__c</fullName>
        <description>Requirement 580</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Only_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req:3789-Rename Product/Software only flag
Defect:5303- Help Text needs to be added</description>
        <inlineHelpText>Tick if EXECUTE Process not applicable - G6 approval not required. Refer to BG Project Categories for criteria (Hyperlink to Document available at Sales Path Guide of Handover Phase).</inlineHelpText>
        <label>Retired Field - Gate 6 Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSO_Exception_Reason__c</fullName>
        <description>Req:5087 - New Solution Sign-Off Fields</description>
        <label>SSO Exception Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solution_Sign_Off_New__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case with no presales solutioning work</fullName>
                </value>
                <value>
                    <fullName>Pure Spare Part or Training offer</fullName>
                </value>
                <value>
                    <fullName>Care offer without SW Release Upgrade (no solutioning work)</fullName>
                </value>
                <value>
                    <fullName>Frame agreement extension (no solutioning work)</fullName>
                </value>
                <value>
                    <fullName>Pure pricing exercise case</fullName>
                </value>
                <value>
                    <fullName>Legal/regulatory/financial approval case only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STA_Trigger_Group__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>STA Trigger Group</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Sign_Off_New__c</fullName>
        <description>Req:5087 - New Solution Sign-Off Fields</description>
        <inlineHelpText>Cases with presales solutioning work require a Solution Sign-off. Change to Not Required only if a case SSO is not needed.</inlineHelpText>
        <label>Solution Sign-Off</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Required (Attached)</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_BGs_BUs__c</fullName>
        <label>Supporting BGs/BUs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Offer_Lead_BU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_Offer_Submission__c</fullName>
        <formula>Customer_Offer_Due_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Offer Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_3_Risks_1_Category__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 3 Risks 1 Category</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Risks_1_Description__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 3 Risks 1 Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_3_Risks_2_Category__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 3 Risks 2 Category</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Risks_2_Description__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 3 Risks 2 Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_3_Risks_3_Category__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 3 Risks 3 Category</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Risks_3_Description__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 3 Risks 3 Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_5_trigger_1_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 5 trigger 1 Category</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_5_trigger_1_Level__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Top 5 trigger 1 Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_5_trigger_1_Name__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 5 trigger 1 Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_5_trigger_2_Category__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 5 trigger 2 Category</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_5_trigger_2_Level__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <label>Top 5 trigger 2 Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_5_trigger_2_Name__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 5 trigger 2 Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_5_trigger_3_Category__c</fullName>
        <description>Req #2286 : Create new field for Excel Add-In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Top 5 trigger 3 Category</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>